Segundo commit Banco configurado e pomm tambem

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,19 @@
   <groupId>senac-dd-20231-GabrielGarcia</groupId>
   <artifactId>senac-dd-20231-GabrielGarcia</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
+   <dependencies>
+   
+  <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.17</version>
+    </dependency>
+    
+    </dependencies>
 </project>
+
